# kokoro-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py  voice_grades.py
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
tests/: conftest.py  test_streamlit_app.py
tests_integration/: conftest.py  test_app_integration.py
